--- a/preload/Cargo.toml
+++ b/preload/Cargo.toml
@@ -13,7 +13,7 @@ path = "example/open.rs"
 [dependencies]
 ctor = "0.6.1"
 dashmap = "6.1.0"
-libc = "0.2.177"
+libc = { "version" ="0.2.177", features = ["extra_traits"] }
 once_cell = "1.21.3"
 redhook = "2.0.0"
 
